--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     <link rel="stylesheet" href="css/piano.css" />
   </head>
   <body>
+    <!-- loader start -->
+    <div id="loadingDiv">
+      <div class="loader"></div>
+    </div>
+    <!-- loader end -->
+
     <header>
       <div class="keys">
         <div class="key" data-note="a"></div>
@@ -79,7 +85,10 @@
       </p>
     </footer>
 
-    <!-- javascript -->
+    <!-- jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+    <!-- script js -->
     <script src="js/piano.js"></script>
   </body>
 </html>
