--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- title -->
     <title>Piano</title>
 
     <!-- required meta tags -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="var(--desert-storm)" />
+    <meta name="theme-color" content="#f8f8f8" />
 
     <!-- favicon -->
     <link rel="icon" href="img/piano.png" />
@@ -68,10 +69,12 @@
       <audio src="sounds/p.mp3" data-note="p" preload="auto"></audio>
       <audio src="sounds/comma.mp3" data-note=";" preload="auto"></audio>
     </header>
+    
     <main>
       <h1 class="title">Piano keyboard</h1>
       <p class="subtitle">You can use your keyboard or mouse to play.</p>
     </main>
+
     <footer>
       <p class="footer-text">
         Coded by
@@ -86,7 +89,11 @@
     </footer>
 
     <!-- jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
 
     <!-- script js -->
     <script src="js/piano.js"></script>
